# EV-TTC

./: LICENSE  README.md  environment.yml  requirements.txt
TTCEF/: README.md  calc_gt.py  create_exp.py  down.py  merge.py  submit.sh
ev_ttc/: CMakeLists.txt  README.md  deps.repo  package.xml
ev_ttc/include/ev_ttc/: config.h  ev_processor.h  exp.h
ev_ttc/launch/: exp_launch.py  params.yaml
ev_ttc/src/: exp.cpp  exp_node.cpp
model/: README.md  evslim.py  onnx_export.py  train.py  ttc.py  util.py
model/conf/: config.yaml
model/conf/models/: evslim_ttc.yaml
model/data/: datawriter.py  ttc_dm.py
model/layers/: aspp.py  conv_lay.py
